COnexion de BD y cambio de fondo

--- a/InicioSesion/style.css
+++ b/InicioSesion/style.css
@@ -45,7 +45,7 @@ a{
     position: relative;
     height: 100vh;
     width: 100%;
-    background-image: url("imgSesión/FondoHamburgesas.jpeg");
+    background-image: url("imgSesión/FondoHamburgesaTicos.jpg");
     background-position: center;
     background-size: cover;
 }
